--- a/css/style.css
+++ b/css/style.css
@@ -2381,3 +2381,15 @@ figure.dotted-bg:before {
         height: 200px
     }
 }
+
+.skills-photo {
+    width: 80%;
+    max-height: 160px;
+    object-fit: cover;
+    margin: 0px auto;
+
+    @media (max-width: 765px) {
+        width: 100%;
+        max-height: 110px;
+    }
+}
